--- a/SocialNetworkV1/src/app/landing-page/landing-page.component.html
+++ b/SocialNetworkV1/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,4 @@
-<button routerLink="login">Login</button>
-<button routerLink="register">Register</button>
+<button [routerLink]="['/login']">Login</button>
+<button [routerLink]="['/register']">Register</button>
+
 
