--- a/SocialNetworkV1/src/app/create-user/create-user.component.html
+++ b/SocialNetworkV1/src/app/create-user/create-user.component.html
@@ -13,6 +13,14 @@
             <label for="name">Email</label>
             <input type="text" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
         </div>
+        <div class="form-group">
+            <label for="name">Username</label>
+            <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="username">
+        </div>
+        <div class="form-group">
+            <label for="name">Password</label>
+            <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password">
+        </div>
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
