--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -1,1 +1,37 @@
-<p>homepage works!</p>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+      <h2>Homepage</h2>
+    </div>
+    <div [hidden]="submitted" style="width:400px;">
+        <form (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="name">Post a picture, how you feel, spill the tea!</label>
+                <input type="text" class="form-control" id="post" required [(ngModel)]="post.post" name="post">
+            </div>
+            
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+    </div>
+    <!-- <div [hidden]="!submitted">
+        <h4>You submitted sucessfully!</h4>
+    </div> -->
+    <div class="panel-body">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Feed</th>
+            
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let post of posts | async">
+            <td>{{post.post}}</td>
+            <td><button (click)="deleteUser(user.id)" class="btn btn-danger">Delete</button>
+                <button (click)="updateUser(user.id)" class="btn btn-info" style="margin-left: 10px">Update</button>
+                <button (click)="userDetails(user.id)" class="btn btn-info" style="margin-left: 10px">Details</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
