--- a/SocialNetworkV1/src/app/profile/profile.component.html
+++ b/SocialNetworkV1/src/app/profile/profile.component.html
@@ -1,3 +1,37 @@
 <h1>Edit Profile</h1>
 
-
+<form>
+    <div class="card-group">
+        <div class="card">
+        <div class="card-body">
+            <div class="form-group">
+                <label >First Name:</label>
+                <input  type="text" class="form-control">
+                
+            </div>
+            <div class="form-group">
+                <label >Last Name:</label>
+                <input type="text" class="form-control">
+                
+            </div>
+            <div class="form-group">
+                <label >Email:</label>
+                <input  type="email" class="form-control">
+                
+            </div>
+                <div class="form-group">
+                    <label >Password:</label>
+                    <input  type="password" class="form-control">
+                    
+                </div>
+                <div class="form-group">
+                    <label >Confirm Password:</label>
+                    <input  type="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-secondary m-1">Update</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
