--- a/SocialNetworkV1/src/app/app.component.html
+++ b/SocialNetworkV1/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a routerLink="users" class="nav-link" routerLinkActive="active">User List</a>
@@ -7,7 +7,7 @@
             <a routerLink="add" class="nav-link" routerLinkActive="active">Add User</a>
         </li>
     </ul>
-</nav>
+</nav> -->
 <div class="container">
     <br>
     <h2 style="text-align: center;">{{title}}</h2>
