--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -1,3 +1,20 @@
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+  <ul class="navbar-nav">
+      <li class="nav-item">
+          <a routerLink="profile" class="nav-link" routerLinkActive="active">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="update/:id" class="nav-link" routerLinkActive="active">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="homepage" class="nav-link" routerLinkActive="active">Home Page</a>
+      </li>
+      <li class="nav-item">
+          <a routerLink="logout" class="nav-link" routerLinkActive="active">Logout</a>
+      </li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
 <div class="panel panel-primary">
     <div class="panel-heading">
       <h2>Homepage</h2>
@@ -26,10 +43,10 @@
         <tbody>
           <tr *ngFor="let post of posts | async">
             <td>{{post.userPost}}</td>
-            <td><button (click)="deleteUser()" class="btn btn-danger">Delete</button>
+            <!-- <td><button (click)="deleteUser()" class="btn btn-danger">Delete</button>
                 <button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
                 <button (click)="userDetails()" class="btn btn-info" style="margin-left: 10px">Details</button>
-            </td>
+            </td> -->
           </tr>
         </tbody>
       </table>
