--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -10,6 +10,9 @@
         <a routerLink="homepage" class="nav-link" routerLinkActive="active">Home Page</a>
       </li>
       <li class="nav-item">
+        <a routerLink="users" class="nav-link" routerLinkActive="active">Search</a>
+      </li>
+      <li class="nav-item">
           <a routerLink="logout" class="nav-link" routerLinkActive="active">Logout</a>
       </li>
   </ul>
