--- a/SocialNetworkV1/src/app/login/login.component.html
+++ b/SocialNetworkV1/src/app/login/login.component.html
@@ -2,7 +2,10 @@
 <form (ngSubmit)="onSubmit()"> <!--action="homepage.component.html"-->
     <label>Username:</label><input type="username" id="username" required [(ngModel)]="user.username" name="username"/>
     <label>Password:</label><input type="password" id="password" required [(ngModel)]="user.password" name="password"/>
-    <button type="button" [routerLink]="['/homepage']" type="submit" value="login">Login</button>
+    <button type="button" type="submit" value="login">Login</button>
     
 </form>
 <h1>This is the user you logged in with: {{login.firstName}} {{login.userId}}</h1>
+<div [hidden]="!submitted">
+    <h4>Unsuccessful Login </h4>
+</div>
