--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -31,6 +31,10 @@
             
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
+        <form>
+          <input type="file" id="imgUp"/>
+          <button (click)="upload()" id="rando" type="submit" class="btn btn-success">Post Image</button>
+      </form>
     </div>
     <!-- <div [hidden]="!submitted">
         <h4>You submitted sucessfully!</h4>
