--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -31,10 +31,10 @@
             
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
-        <form>
+        <!-- <form>
           <input type="file" id="imgUp"/>
           <button (click)="upload()" id="rando" type="submit" class="btn btn-success">Post Image</button>
-      </form>
+      </form> -->
     </div>
     <!-- <div [hidden]="!submitted">
         <h4>You submitted sucessfully!</h4>
@@ -50,7 +50,8 @@
         <tbody>
           <tr *ngFor="let post of posts | async">
             <td>{{post.userPost}}</td>
-            <td><button (click)="createLike()" class="btn btn-danger">Like</button>
+            <td>{{post.likes}}</td>
+            <td><button (click)="createLike(post.postId)" class="btn btn-danger">Like</button>
                  <!--<button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
                 <button (click)="userDetails()" class="btn btn-info" style="margin-left: 10px">Details</button>-->
             </td> 
