--- a/SocialNetworkV1/src/app/profile/profile.component.html
+++ b/SocialNetworkV1/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
-      <h2>User List</h2>
+      <h2>Profile</h2>
     </div>
     <div class="panel-body">
       <table class="table table-striped">
@@ -10,7 +10,6 @@
             <th>Lastname</th>
             <th>Email</th>
             <th>Username</th>
-            <th>Password</th>
             <th>Profile Picture</th>
           </tr>
         </thead>
@@ -20,7 +19,6 @@
             <td>{{user.lastName}}</td>
             <td>{{user.email}}</td>
             <td>{{user.username}}</td>
-            <td>{{user.password}}</td>
             <td>{{user.profilepicture}}</td>
           </tr>
         </tbody>
