--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -1,23 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <ul class="navbar-nav">
-      <li class="nav-item">
-          <a routerLink="profile" class="nav-link" routerLinkActive="active">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="update/:id" class="nav-link" routerLinkActive="active">Settings</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="homepage" class="nav-link" routerLinkActive="active">Home Page</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="users" class="nav-link" routerLinkActive="active">Search</a>
-      </li>
-      <li class="nav-item">
-          <a routerLink="logout" class="nav-link" routerLinkActive="active">Logout</a>
-      </li>
-  </ul>
-</nav>
-<router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
 <div class="panel panel-primary">
     <div class="panel-heading">
       <h2>Homepage</h2>
