adding file upload to front end

--- a/SocialNetworkV1/src/app/landing-page/landing-page.component.html
+++ b/SocialNetworkV1/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
 <button [routerLink]="['/landing-page/login']">Login</button>
-<button [routerLink]="['/landing-page/register']">Register</button>
+<button [routerLink]="['/landing-page/add']">Register</button>
 
 
