--- a/SocialNetworkV1/src/app/app.component.html
+++ b/SocialNetworkV1/src/app/app.component.html
@@ -8,14 +8,16 @@
         </li>
     </ul>
 </nav> -->
-<div class="container">
+<!-- <div class="container">
     <br>
     <h2 style="text-align: center;">{{title}}</h2>
     <hr>
     <div class="card">
         <div class="card-body">
-            <router-outlet></router-outlet>
+            
         </div>
     </div>
-</div>
+</div> -->
+
+<router-outlet></router-outlet>
 
