--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -5,6 +5,11 @@
     </div>
     <div style="width:400px;">
         <form (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="name">Image</label>
+            <input type="file"  class="form-control" id="selectedFile" required [(ngModel)]="post.image" name="selectedFile" accept="image/jpeg, image/png">
+          </div>
+          <!-- (change)="onFileSelected($event)" -->
             <div class="form-group">
                 <label for="name">Post a picture, how you feel, spill the tea!</label>
                 <input type="text" class="form-control" id="userPost" required [(ngModel)]="post.userPost" name="userPost">
