--- a/SocialNetworkV1/src/app/landing-page/landing-page.component.html
+++ b/SocialNetworkV1/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,7 @@
-<button [routerLink]="['/landing-page/login']">Login</button>
-<button [routerLink]="['/landing-page/register']">Register</button>
+<div class="button">
+    <button type="button" class="btn btn-primary btn-lg" style="margin-right:30px" [routerLink]="['/landing-page/login']">Login</button>
+    <button type="button" class="btn btn-secondary btn-lg" [routerLink]="['/landing-page/register']">Register</button>
+</div>
+
 
 
