--- a/SocialNetworkV1/src/app/user-list/user-list.component.html
+++ b/SocialNetworkV1/src/app/user-list/user-list.component.html
@@ -4,7 +4,7 @@
     <!-- <label for="name">Post a picture, how you feel, spill the tea!</label> -->
     <input placeholder="Search User" type="text" class="form-control" id="name" required [(ngModel)]="name" name="name">
 </div>
-<button type="submit" class="btn btn-success">Search</button>
+<button type="submit" style="float:right" class="btn btn-success">Search</button>
 </form>
 
 <div class="panel panel-primary">
