--- a/SocialNetworkV1/src/app/app.component.html
+++ b/SocialNetworkV1/src/app/app.component.html
@@ -8,9 +8,10 @@
         </li>
     </ul>
 </nav> -->
+<body class="background">
 <div class="container">
     <br>
-    <h2 style="text-align: center;">{{title}}</h2>
+    <img src="../assets/the tea.jpg" class="center"/>
     <hr>
     <div class="card">
         <div class="card-body">
@@ -18,4 +19,5 @@
         </div>
     </div>
 </div>
+</body>
 
