--- a/SocialNetworkV1/src/app/nav-bar/nav-bar.component.html
+++ b/SocialNetworkV1/src/app/nav-bar/nav-bar.component.html
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav>
     <ul class="navbar-nav">
-        <li class="nav-item">
-            <a routerLink="/landing-page/profile" class="nav-link" routerLinkActive="active">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="/landing-page/update/:id" class="nav-link" routerLinkActive="active">Settings</a>
-        </li>
         <li class="nav-item">
           <a routerLink="/landing-page/homepage" class="nav-link" routerLinkActive="active">Home Page</a>
         </li>
         <li class="nav-item">
           <a routerLink="/landing-page/users" class="nav-link" routerLinkActive="active">Search</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/landing-page/profile" class="nav-link" routerLinkActive="active">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/landing-page/update/:id" class="nav-link" routerLinkActive="active">Settings</a>
+      </li>
         <li class="nav-item">
             <a (click)="logout()" class="nav-link" routerLinkActive="active">Logout</a>
         </li>
