--- a/SocialNetworkV1/src/app/register/register.component.html
+++ b/SocialNetworkV1/src/app/register/register.component.html
@@ -1,11 +1,22 @@
 <h1>Registration</h1>
 <form method="POST" action="">
-    <label>Username:</label><input type="username" name="username"/>
-    <label>Password:</label><input type="password" name="password"/>
-    <label>First Name:</label><input type="text" name="firstName"/>
-    <label>Last Name:</label><input type="text" name="lastName"/>
-    <label>Email:</label><input type="email" name="email"/>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <div class="form-group">
+    <label style="margin-right:25px">Username:</label><input type="username" name="username"/>
+    </div>
+    <div class="form-group">
+    <label style="margin-right:28px">Password:</label><input type="password" name="password"/>
+    </div>
+    <div class="form-group">
+    <label style="margin-right:20px">First Name:</label><input type="text" name="firstName"/>
+    </div>
+    <div class="form-group">
+    <label style="margin-right:20px">Last Name:</label><input type="text" name="lastName"/>
+    </div>
+    <div class="form-group">
+    <label style="margin-right:58px">Email:</label><input type="email" name="email"/>
+    <br/>
+    <button type="button" class="btn btn-primary">Register</button>
+    </div>
 
 
 </form>
