--- a/SocialNetworkV1/src/app/update-user/update-user.component.html
+++ b/SocialNetworkV1/src/app/update-user/update-user.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<h3>Update User</h3>
+<h3>Update Profile</h3>
 <div style="width:400px;">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
