--- a/SocialNetworkV1/src/app/app.component.css
+++ b/SocialNetworkV1/src/app/app.component.css
@@ -7,7 +7,7 @@
 .background {
     background-color: #002E2C;
     width: auto;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto 0 0px;
 }
 
