--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -20,24 +20,65 @@
     <!-- <div [hidden]="!submitted">
         <h4>You submitted sucessfully!</h4>
     </div> -->
-    <div class="panel-body">
+    <!-- <div class="panel-body">
       <table class="table table-striped">
         <thead>
           <tr>
             <th>Feed</th>
             
           </tr>
-        </thead>
-        <tbody>
+        </thead> -->
+        <div class="card gedf-card" *ngFor="let post of posts | async">
+          <div class="card-header">
+              <div class="d-flex justify-content-between align-items-center" >
+                  <div class="d-flex justify-content-between align-items-center" >
+                      <div class="mr-2">
+                        <div *ngIf="user.profilepicture;else other_content"><img class="profile-icon" [src]="user.profilepicture"></div>
+                       <ng-template #other_content><img class="rounded-circle" width="45" src="/SocialNetworkV1/src/assets/Profile-ICon.png" alt=""></ng-template>
+
+                      </div>
+                      <div class="ml-2">
+                        <div>
+                          <label><b>{{user.username}}</b></label>
+                        </div>
+                        <div>
+                          <label><b>{{user.firstName}} {{user.lastName}}</b></label>
+                        </div>
+                      </div>
+                  </div>
+                  <div>
+                  </div>
+              </div>
+
+            </div>
+            <div class="card-body">
+                
+                <a class="card-link" href="#">
+                  <div class="viewer">
+          
+                  <img style="width: 300px; height: 300px;" [src]="post.image" class="">
+                </div>
+                </a>
+          
+                <p class="card-text">
+                    {{post.userPost}}
+                </p>
+            </div>
+            <div class="card-footer">
+                <button (click)="createLike(post.postId)" class="btn btn-primary">Like</button>
+                <a><span>{{post.likes}}</span></a>
+          <!-- </div> -->
+        <!-- </div> -->
+        <!-- <tbody>
           <tr *ngFor="let post of posts | async">
             <td>{{post.userPost}}</td>
             <td>{{post.likes}}</td>
-            <td><button (click)="createLike(post.postId)" class="btn btn-danger">Like</button>
+            <td><button (click)="createLike(post.postId)" style="margin-left:-200%;" class="btn btn-primary">Like</button> -->
                  <!--<button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
                 <button (click)="userDetails()" class="btn btn-info" style="margin-left: 10px">Details</button>-->
-            </td> 
+            <!-- </td> 
           </tr>
-        </tbody>
-      </table>
+        </tbody> -->
+      <!-- </table>
     </div>
-  </div>
+  </div> -->
