--- a/SocialNetworkV1/src/app/profile/profile.component.html
+++ b/SocialNetworkV1/src/app/profile/profile.component.html
@@ -1,9 +1,26 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
 <app-nav-bar></app-nav-bar>
 <div class="panel panel-primary">
     <div class="panel-heading">
       <h2>Profile</h2>
     </div>
-    <div class="panel-body">
+    <div class="container-fluid gedf-wrapper">
+      <div class="row">
+          <div class="col-md-3">
+              <div class="card">
+                  <div class="card-body">
+                      <div>{{user.profilepicture}}</div>
+                      <div class="h5">{{user.username}}</div>
+                      <div class="h7 text-muted">{{user.firstName}} {{user.lastName}} </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 gedf-main">
+    <!-- <div class="panel-body">
       <table class="table table-striped">
         <thead>
           <tr>
@@ -25,7 +42,7 @@
         </tbody>
       </table>
     </div>
-  </div>
+  </div> -->
 
   <div class="panel-body">
     <table class="table table-striped">
