--- a/SocialNetworkV1/src/app/create-user/create-user.component.html
+++ b/SocialNetworkV1/src/app/create-user/create-user.component.html
@@ -4,26 +4,26 @@
         <div class="col-md-6">
             <form (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <label for="name">First Name</label>
+                    <label style="margin-right:25px" for="name">First Name</label>
                     <input type="text" class="form-control" id="firstName" required [(ngModel)]="user.firstName"
                         name="firstName">
                 </div>
                 <div class="form-group">
-                    <label for="name">Last Name</label>
+                    <label style="margin-right:28px" for="name">Last Name</label>
                     <input type="text" class="form-control" id="lastName" required [(ngModel)]="user.lastName"
                         name="lastName">
                 </div>
                 <div class="form-group">
-                    <label for="name">Email</label>
+                    <label style="margin-right:20px" for="name">Email</label>
                     <input type="text" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
                 </div>
                 <div class="form-group">
-                    <label for="name">Username</label>
+                    <label style="margin-right:20px" for="name">Username</label>
                     <input type="text" class="form-control" id="username" required [(ngModel)]="user.username"
                         name="username">
                 </div>
                 <div class="form-group">
-                    <label for="name">Password</label>
+                    <label style="margin-right:58px" for="name">Password</label>
                     <input type="text" class="form-control" id="password" required [(ngModel)]="user.password"
                         name="password">
                 </div>
