--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -1,48 +1,92 @@
 <app-nav-bar></app-nav-bar>
 <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h2>Homepage</h2>
-    </div>
-    <div style="width:400px;">
-        <form (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label for="name">Image</label>
-            <input (change)="onFileSelected($event)" type="file"  class="form-control" id="selectedFile" required [(ngModel)]="post.image" name="selectedFile" accept="image/jpeg, image/png">
-          </div>
-          <!-- (change)="onFileSelected($event)" -->
-            <div class="form-group">
-                <label for="name">Post a picture, how you feel, spill the tea!</label>
-                <input type="text" class="form-control" id="userPost" required [(ngModel)]="post.userPost" name="userPost">
-            </div>
-            
-            <button type="submit" class="btn btn-success">Submit</button>
-        </form>
-        <!-- <form>
+  <div class="panel-heading">
+    <h2>Homepage</h2>
+  </div>
+  <div style="width:400px;">
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="name">Image</label>
+        <input (change)="onFileSelected($event)" type="file" class="form-control" id="selectedFile" required
+          [(ngModel)]="post.image" name="selectedFile" accept="image/jpeg, image/png">
+      </div>
+      <div class="form-group">
+
+        <input type="text" class="form-control" id="userPost" required [(ngModel)]="post.userPost" name="userPost"
+          placeholder="Post a picture, how you feel, spill the tea!">
+      </div>
+
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+    <!-- <form>
           <input type="file" id="imgUp"/>
           <button (click)="upload()" id="rando" type="submit" class="btn btn-success">Post Image</button>
       </form> -->
-    </div>
-    <!-- <div [hidden]="!submitted">
+  </div>
+  <!-- <div [hidden]="!submitted">
         <h4>You submitted sucessfully!</h4>
     </div> -->
-    <div class="panel-body">
+  <!-- <div class="panel-body">
       <table class="table table-striped">
         <thead>
           <tr>
             <th>Feed</th>
             
           </tr>
-        </thead>
-        <tbody>
+        </thead> -->
+  <div class="card gedf-card" *ngFor="let post of posts | async">
+    <div class="card-header">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="mr-2">
+            <div *ngIf="user.profilepicture;else other_content"><img class="profile-icon" src="{{post.image}}">
+            </div>
+            <ng-template #other_content><img class="rounded-circle" width="45"
+                src="/SocialNetworkV1/src/assets/Profile-ICon.png" alt=""></ng-template>
+
+          </div>
+          <div class="ml-2">
+            <div>
+              <label><b>{{user.username}}</b></label>
+            </div>
+            <div>
+              <label><b>{{user.firstName}} {{user.lastName}}</b></label>
+            </div>
+          </div>
+        </div>
+        <div>
+        </div>
+      </div>
+
+    </div>
+    <div class="card-body">
+
+      <a class="card-link" href="#">
+        <div class="viewer">
+
+          <img style="width: 300px; height: 300px;" [src]="post.image" class="">
+        </div>
+      </a>
+
+      <p class="card-text">
+        {{post.userPost}}
+      </p>
+    </div>
+    <div class="card-footer">
+      <button (click)="createLike(post.postId)" class="btn btn-primary">Like</button>
+      <a><span>{{post.likes}}</span></a>
+      <!-- </div> -->
+      <!-- </div> -->
+      <!-- <tbody>
           <tr *ngFor="let post of posts | async">
             <td>{{post.userPost}}</td>
             <td>{{post.likes}}</td>
-            <td><button (click)="createLike(post.postId)" class="btn btn-danger">Like</button>
-                 <!--<button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
+            <td><button (click)="createLike(post.postId)" style="margin-left:-200%;" class="btn btn-primary">Like</button> -->
+      <!--<button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
                 <button (click)="userDetails()" class="btn btn-info" style="margin-left: 10px">Details</button>-->
-            </td> 
+      <!-- </td> 
           </tr>
-        </tbody>
-      </table>
+        </tbody> -->
+      <!-- </table>
     </div>
-  </div>
+  </div> -->
