--- a/SocialNetworkV1/src/app/update-user/update-user.component.html
+++ b/SocialNetworkV1/src/app/update-user/update-user.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<h3>Update User</h3>
+<h3>Update Profile</h3>
 <div style="width:400px;">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
@@ -25,6 +25,10 @@
         <div class="form-group">
             <label for="name">Password</label>
             <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password">
+        </div>
+        <div class="form-group">
+            <label for="name">Upload Profile Picture</label>
+            <input (change)="onFileSelected($event)" type="file"  class="form-control" id="selectedFile" required [(ngModel)]="user.profilepicture" name="selectedFile" accept="image/jpeg, image/png">
         </div>
 
         <button type="submit" class="btn btn-success">Submit</button>
