--- a/SocialNetworkV1/src/app/homepage/homepage.component.css
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.css
@@ -7,11 +7,10 @@ th {
 }
 
 td {
-    padding-left: 20%;
+    padding-left: 5%;
 }
 
 .card{
-    max-width: 40%;
     justify-content: space-between;
     align-content: center;
     margin: 2% 0 2% 29%;
@@ -30,4 +29,8 @@ td {
 .card-header{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
+}
+
+.btn{
+    background-color: #71BA42;
 }
