--- a/SocialNetworkV1/src/app/homepage/homepage.component.html
+++ b/SocialNetworkV1/src/app/homepage/homepage.component.html
@@ -36,7 +36,7 @@
         <tbody>
           <tr *ngFor="let post of posts | async">
             <td>{{post.userPost}}</td>
-            <td> <img src="{{post.image}}" width="24" height="39"> </td>
+            <td> <img src="{{post.image}}" > </td>
             <td>{{post.likes}}</td>
             <td><button (click)="createLike(post.postId)" class="btn">Like</button>
                  <!--<button (click)="updateUser()" class="btn btn-info" style="margin-left: 10px">Update</button>
